<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xml.MainActivity"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_settings"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/description"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:background="#DDDDDD"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Personalinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/personal_info"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:layout_marginEnd="15dp"
                android:background="@drawable/border"/>

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:background="@drawable/border"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/Country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/country"
                android:inputType="textPersonName"
                android:background="@drawable/border"
                android:focusable="false"
            />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:src="@drawable/panah"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="right"
                />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="25dp"
            android:background="#DDDDDD"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/Notifikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifikasi"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/Weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly_report"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switchweekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="ON"
                android:textOff="OFF"
                android:layout_gravity="right"
                android:thumbTint="@color/button"
                android:trackTint="@color/button"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/pullrequests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pull_request"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switchrequests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="ON"
                android:textOff="OFF"
                android:layout_gravity="right"
                android:thumbTint="@color/button"
                android:trackTint="@color/button"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/deployment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deployment_triggers"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switchdeployment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="ON"
                android:textOff="OFF"
                android:layout_gravity="right"
                android:thumbTint="@color/button"
                android:trackTint="@color/button"
                />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:background="#DDDDDD"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/Security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/runsecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_desc"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/runsecuritycb"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="right"
                android:buttonTint="@color/button"/>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/less"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/progressHorizontal"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/less"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:max="100"
                android:progress="60"
                android:progressTint="@color/my_yellow"
                android:thumbTint="@color/my_yellow"
            />


            <TextView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/progressHorizontal"
                android:text="@string/more"
                android:textSize="16sp" />

        </RelativeLayout>
        <!-- https://stackoverflow.com/questions/2020882/how-to-change-progress-bars-progress-color-in-android -->

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:background="#DDDDDD"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btnsave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textStyle="bold"
            android:background="@drawable/save"
            android:layout_marginRight="8dp"/>

        <Button
            android:id="@+id/btncancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/cancel"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>